<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileActivity"
    android:background="@drawable/bo">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="10dp">
        <LinearLayout
            android:layout_height="0dp"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:layout_margin="5dp">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="NAME:"
                    android:fontFamily="sans-serif-condensed-medium"
                    android:textStyle="bold"
                    android:textSize="20dp"
                    android:gravity="center_horizontal" />
            </LinearLayout>
            <LinearLayout
                android:layout_height="match_parent"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:orientation="vertical"
                android:layout_margin="5dp">
                <EditText
                    android:id="@+id/sign_up_name_button"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:ems="10"
                    android:inputType="textPersonName" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_height="0dp"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:layout_margin="5dp">
            <LinearLayout
                android:layout_height="match_parent"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:layout_margin="5dp">
                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="PHONE NUMBER:"
                    android:fontFamily="sans-serif-condensed-medium"
                    android:textStyle="bold"
                    android:textSize="20dp"
                    android:gravity="center_horizontal"/>
            </LinearLayout>

            <LinearLayout
                android:layout_height="match_parent"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:orientation="horizontal"
                android:layout_margin="5dp">
                <EditText
                    android:id="@+id/phone_number_button"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="phone" />
            </LinearLayout>
        </LinearLayout>
    <LinearLayout
        android:layout_height="0dp"
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:layout_margin="5dp">
        <LinearLayout
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_margin="5dp">
            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="SCHOOL:"
                android:fontFamily="sans-serif-condensed-medium"
                android:textStyle="bold"
                android:textSize="20dp"
                android:gravity="center_horizontal"/>
        </LinearLayout>
        <LinearLayout
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:orientation="vertical"
            android:layout_margin="5dp">
            <AutoCompleteTextView
                android:id="@+id/school_button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:completionThreshold="1"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_height="0dp"
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:layout_margin="5dp">
        <LinearLayout
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_margin="5dp">
            <TextView
                android:id="@+id/textView8"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="MAJOR"
                android:fontFamily="sans-serif-condensed-medium"
                android:textStyle="bold"
                android:textSize="20dp"
                android:gravity="center_horizontal"/>
        </LinearLayout>
        <LinearLayout
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:orientation="vertical"
            android:layout_margin="5dp">
            <AutoCompleteTextView
                android:id="@+id/major_button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:completionThreshold="1"/>
        </LinearLayout>
    </LinearLayout>
        <LinearLayout
            android:layout_height="0dp"
            android:layout_width="match_parent"
            android:layout_weight="0.65"
            android:orientation="vertical"
            android:layout_margin="5dp">
            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="REGISTERED COURSES"
                android:fontFamily="sans-serif-condensed-medium"
                android:textStyle="bold"
                android:textSize="24dp"
                android:gravity="center_horizontal"/>
        </LinearLayout>

        <LinearLayout
            android:layout_height="0dp"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_margin="5dp">
            <Spinner
                android:id="@+id/course_spinner"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:popupBackground="@drawable/bo"
                android:fontFamily="sans-serif-condensed-medium"
                android:textStyle="bold"
                android:textSize="20dp"
                android:spinnerMode="dropdown"/>
        </LinearLayout>


        <LinearLayout
            android:layout_height="0dp"
            android:layout_width="match_parent"
            android:layout_weight="4"
            android:orientation="vertical"
            android:layout_margin="5dp">
            <ListView
                android:id="@+id/course_list"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="sans-serif-condensed-medium"
                android:textStyle="bold"
                android:textSize="20dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_height="0dp"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_margin="5dp">
            <Button
                android:id="@+id/course_page_done_button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/done_course_page"
                android:fontFamily="sans-serif-condensed-medium"
                android:textStyle="bold"
                android:textSize="24dp"
                android:background="@drawable/o2"/>
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>